--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: lime;
-	color: yellow;
+	background: black;
+	color: white;
 	font-family: fantasy;
 }
 main {
