--- a/style.css
+++ b/style.css
@@ -1,22 +1,62 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+* {
+  margin:0; padding:0;
+}
+
 body {
-	margin: 0;
-	padding: 0;
-	background: black;
-	color: white;
-	font-family: 'Quicksand', sans-serif;
+  background: #8080c0;
 }
 
-main {
-	padding: 1em;
+h1 {
+	color: #111;
+	font-family: Arial, sans-serif;
+	font-size: 275px;
+	font-weight: bold;
+	letter-spacing: -1px;
+	line-height: 1;
+	text-align: center;
 }
 
-
-h1{
-	color: orange;
-	font-family: 'Quicksand', sans-serif;
-	}
-
-p{
-color: white;
-
+h2 {
+	color: #111;
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 30px;
+	font-weight: 300;
+	line-height: 32px;
+	margin: 0 0 72px;
+	text-align: center;
 }
+
+p {
+	color: #302603; /* lighter: #685206 */
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	line-height: 24px;
+	margin: 0 0 24px;
+	text-align: justify;
+	text-justify: inter-word;
+}
+
+.left {
+	float: left;
+	margin-left: 15px;
+	width: 260px;
+}
+
+.right {
+	float: right;
+	margin-right: 15px;
+	width: 260px;
+}
+
+.content {
+  margin: 70px auto;
+  width: 650px;
+  background: #8080c0;
+}
+
+.clear {
+  clear: both;
+}
+
